Create cool layout. Add game module. Add routing.

--- a/src/app/public/home/home.component.html
+++ b/src/app/public/home/home.component.html
@@ -1,3 +1,19 @@
-<p>
-  home works!
-</p>
+<div class="home">
+  <h1 class="title">Welcome to some game web application</h1>
+  <p class="description">
+    This web application is an educational adventure showcasing the capabilities of ChatGPT. As a web developer with over 10 years of experience, I am utilizing AI to do the heavy lifting and make my life easier. But let's be real, who needs sleep when you can just code all night, right? Just kidding, the programmer still needs to keep an eye on things and make sure everything runs smoothly.
+  </p>
+  <p class="signature">- Author Michał Klukow & ChatGPT</p>
+  
+  <div class="logos">
+    <a href="https://angular.io/" target="_blank">
+      <img src="assets/angular_whiteTransparent.svg" height="100">
+    </a>
+    <a href="https://phaser.io/" target="_blank">
+      <img src="assets/Phaser-Logo-Small.png" height="100">
+    </a>
+    <a href="https://openai.com/" target="_blank">
+      <img src="assets/chatGpt.png" height="100">
+    </a>
+  </div>
+</div>
