--- a/src/app/shared/layout/layout.component.html
+++ b/src/app/shared/layout/layout.component.html
@@ -1,2 +1,24 @@
-la
-<ng-content></ng-content>
+<div class="background-container">
+  <div class="background">
+    <span></span>
+    <span></span>
+    <span></span>
+    <span></span>
+    <span></span>
+    <span></span>
+    <span></span>
+    <span></span>
+    <span></span>
+    <span></span>
+    <span></span>
+    <span></span>
+    <span></span>
+  </div>
+</div>
+<main>
+  <app-navbar></app-navbar>
+  <div class="content-container">
+    <ng-content></ng-content>
+  </div>
+  <app-footer></app-footer>
+</main>
