Prepare GameComponent styles before implementing Phser.

--- a/src/app/public/game/game.component.html
+++ b/src/app/public/game/game.component.html
@@ -1,3 +1,7 @@
-<p>
-  game works!
-</p>
+<div class="game">
+  <div class="game-panel">
+  </div>
+  <div class="game-canvas">
+    <canvas #gameCanvas></canvas>
+  </div>
+</div>
