--- a/src/app/shared/layout/layout.component.scss
+++ b/src/app/shared/layout/layout.component.scss
@@ -1,6 +1,7 @@
 main {
   height: 100vh;
   width: 100vw;
+  max-width: 100%;
   color: rgb(231, 231, 231);
   text-shadow: 1px 1px rgb(0, 0, 0);
   font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -13,7 +14,6 @@ main {
 .content-container {
   display: grid;
   grid-row: 2 / 3;
-  padding: 30px;
 
   > div {
     grid-area: 1 / 1 / 2 / 2;
@@ -29,6 +29,7 @@ main {
   user-select: none;
   height: 100vh;
   width: 100vw;
+  max-width: 100%;
   top: 0;
   left: 0;
   overflow: hidden;
