Initialize Phraser, start simple PoC game. Refine styles.

--- a/src/app/public/game/game.component.html
+++ b/src/app/public/game/game.component.html
@@ -2,6 +2,6 @@
   <div class="game-panel">
   </div>
   <div class="game-canvas">
-    <canvas #gameCanvas></canvas>
+    <app-scene></app-scene>
   </div>
 </div>
