Refine scene. Add first not working control button.

--- a/src/app/public/game/game.component.html
+++ b/src/app/public/game/game.component.html
@@ -1,5 +1,6 @@
 <div class="game">
   <div class="game-panel">
+    <app-game-controller></app-game-controller>
   </div>
   <div class="game-canvas">
     <app-scene></app-scene>
