Change Phaser to ThreeJS. Prepare default scene.

--- a/src/app/public/game/scene/scene.component.html
+++ b/src/app/public/game/scene/scene.component.html
@@ -1,1 +1,3 @@
-<div #gameContainer class="canvas" id="gameContainer"></div>
+  <div #canvasContainer class="canvas-container">
+    <canvas #canvas></canvas>
+  </div>
