--- a/src/app/public/game/game.component.scss
+++ b/src/app/public/game/game.component.scss
@@ -1,7 +1,7 @@
 .game {
   padding: 15px;
   display: grid;
-  grid-template-columns: 20% 80%;
+  grid-template-columns: 20% auto;
   height: 100%;
   box-sizing: border-box;
 }
