--- a/src/app/shared/layout/layout.component.scss
+++ b/src/app/shared/layout/layout.component.scss
@@ -12,8 +12,10 @@ main {
 }
 
 .content-container {
+  position: relative;
   display: grid;
   grid-row: 2 / 3;
+  max-width: 100%;
 
   > div {
     grid-area: 1 / 1 / 2 / 2;
