Basic threeJS scene is set up. Minor tydings.

--- a/src/app/public/game/game-controller/game-controller.component.html
+++ b/src/app/public/game/game-controller/game-controller.component.html
@@ -1,5 +1,6 @@
 <div class="game-controller">
   <div class="game-controller__grid">
-    <button class="game-controller__button" title="Start a game"><i class="fa fa-play"></i>Start</button>
+    <button class="game-controller__button" title="Start the game" (click)="startGame()"><i class="fa fa-play"></i>Start</button>
+    <button class="game-controller__button" title="Stop the game" (click)="stopGame()"><i class="fa fa-stop"></i>Stop</button>
   </div>
 </div>
