Started moving Meshes to another module.

--- a/src/app/public/home/home.component.html
+++ b/src/app/public/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="home">
   <h1 class="title">Welcome to some game web application</h1>
   <p class="description">
-    This web application is an educational adventure showcasing the capabilities of ChatGPT. As a web developer with over 10 years of experience, I am utilizing AI to do the heavy lifting and make my life easier.
+    Something about me producing a game in ThreeJS, while had never did that, but having over 10 years of experience in industry mainly doing web apps.
   </p>
   
   <div class="logos">
