--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -6,10 +6,9 @@
     <ul>
       <li><a [routerLink]="['/']">Home</a></li>
       <li><a [routerLink]="['/game']">Game</a></li>
-      <li><i class="fa fa-brands fa-github"></i></li>
     </ul>
   </nav>
-  <div class="burger-menu">
+  <div class="burger-menu display-none">
     <i class="fa fa-bars"></i>
   </div>
 </header>
