Refine code. Add camera scroll handling. Fix homepage description.

--- a/src/app/public/home/home.component.html
+++ b/src/app/public/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="home">
   <h1 class="title">Welcome to some game web application</h1>
   <p class="description">
-    Something about me producing a game in ThreeJS, while had never did that, but having over 10 years of experience in industry mainly doing frontend web apps for corporations. The whole app is using Angular and NgRx infrastructure, and the backed is using NestJS in NodeJS environment with MongoDB as database. The reason of the app is to have a fun and to learn while developing the whole infrastructure. Whole process is supported by intelligent documentation as ChatGPT.
+    Some description of the game produced in ThreeJS in environment of Angular and NgRx application. NodeJS backend build with NestJS and MongoDB.
   </p>
   
   <div class="logos">
@@ -13,9 +13,6 @@
     </a>
     <a class="threejs anim-sparks" (click)="handleExternalLibClicked('threejs')" [ngClass]="{ 'animate': animateClass === 'threejs' }" title="threejs">
       <img src="assets/threejs-logo.png" height="100">
-    </a>
-    <a class="chatgpt anim-sparks" (click)="handleExternalLibClicked('chatgpt')" [ngClass]="{ 'animate': animateClass === 'chatgpt' }" title="chatgpt">
-      <img src="assets/chatGpt.png" height="100">
     </a>
     <a class="nestjs anim-sparks" (click)="handleExternalLibClicked('nestjs')" [ngClass]="{ 'animate': animateClass === 'nestjs' }" title="nestjs">
       <img src="assets/nestjs-icon.svg" height="100">
