--- a/src/app/shared/layout/layout.component.scss
+++ b/src/app/shared/layout/layout.component.scss
@@ -25,11 +25,13 @@ main {
   height: 100vh;
   width: 100vw;
   max-width: 100%;
+  max-height: 100vh;
+  overflow: hidden;
   color: rgb(231, 231, 231);
   text-shadow: 1px 1px rgb(0, 0, 0);
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   display: grid;
-  grid-template-rows: 54px 1fr 50px;
+  grid-template-rows: 54px 1fr;
   z-index: 2;
   position: absolute;
 }
@@ -38,11 +40,10 @@ main {
   position: relative;
   display: grid;
   grid-row: 2 / 3;
+  grid-template-rows: 1fr auto;
   max-width: 100%;
-
-  > div {
-    grid-area: 1 / 1 / 2 / 2;
-  }
+  min-height: 0;
+  overflow-y: auto;
 }
 
 ::ng-deep router-outlet {
